--- a/index.html
+++ b/index.html
@@ -1543,9 +1543,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
 
           <div>
-            <label for="whatsapp">Tu WhatsApp</label>
-            <input id="whatsapp" name="whatsapp" type="tel" inputmode="tel"
-                   placeholder="Ej: 11 2345 6789" required />
+            <label for="whatsapp">¿De dónde me escribís?</label>
+            <input id="whatsapp" name="whatsapp" type="text" inputmode="tel"
+                   placeholder="Ej: Córdoba, Buenos Aires, Rosario" required />
           </div>
         </div>
 
