--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div>
             <label for="whatsapp">¿De dónde me escribís?</label>
             <input id="whatsapp" name="whatsapp" type="text" inputmode="tel"
-                   placeholder="Ej: Córdoba, Buenos Aires, Rosario" required />
+                   placeholder="Ej: Córdoba" required />
           </div>
         </div>
 
