--- a/index.html
+++ b/index.html
@@ -1543,8 +1543,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
 
           <div>
-            <label for="whatsapp">¿De dónde me escribís?</label>
-            <input id="whatsapp" name="whatsapp" type="text" inputmode="tel"
+            <label for="origen">¿De dónde me escribís?</label>
+            <input id="origen" name="origen" type="text" inputmode="text"
                    placeholder="Ej: Córdoba" required />
           </div>
         </div>
