--- a/index.html
+++ b/index.html
@@ -585,25 +585,41 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       gap: 0.85rem;
     }
     label { font-size: 0.82rem; font-weight: 900; margin-bottom: 0.25rem; display: block; }
-    input, textarea {
-      width: 100%;
-      border: 1px solid #e3e3e3;
-      border-radius: 999px;
-      padding: 0.7rem 0.95rem;
-      font-size: 0.95rem;
-      outline: none;
-      transition: border-color .15s ease, box-shadow .15s ease;
-      background: #fff;
-    }
-    textarea {
-      border-radius: 14px;
-      min-height: 92px;
-      resize: vertical;
-    }
-    input:focus, textarea:focus {
-      border-color: rgba(245,124,0,0.9);
-      box-shadow: 0 0 0 2px rgba(245,124,0,0.14);
-    }
+    /* ✅ Inputs normales (NO checkbox) */
+input:not([type="checkbox"]), textarea {
+  width: 100%;
+  border: 1px solid #e3e3e3;
+  border-radius: 999px;
+  padding: 0.7rem 0.95rem;
+  font-size: 0.95rem;
+  outline: none;
+  transition: border-color .15s ease, box-shadow .15s ease;
+  background: #fff;
+}
+
+textarea {
+  border-radius: 14px;
+  min-height: 92px;
+  resize: vertical;
+}
+
+input:not([type="checkbox"]):focus, textarea:focus {
+  border-color: rgba(245,124,0,0.9);
+  box-shadow: 0 0 0 2px rgba(245,124,0,0.14);
+}
+
+/* ✅ Checkbox FIX mobile */
+.consent input[type="checkbox"]{
+  width: 18px;
+  height: 18px;
+  margin-top: 0.22rem;
+  padding: 0;
+  border-radius: 4px;
+  accent-color: var(--color-green);
+  appearance: auto;
+  -webkit-appearance: checkbox;
+}
+
     .consent {
       display: flex;
       gap: 0.5rem;
@@ -611,7 +627,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       color: var(--color-muted);
       font-size: 0.84rem;
     }
-    .consent input { margin-top: 0.22rem; width: auto; }
 
     /* Final CTA */
     .final-cta {
