--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <!-- Verificación dominio Meta -->
+  <meta name="facebook-domain-verification" content="z2h6g0e83muzlrmw9o7xoocv617wpc" />
   <title>Curso de Manipulador de Alimentos 100% Online | Roxana Furman</title>
   <meta name="description" content="Curso oficial 100% online para obtener tu Carnet de Manipulador Oficial con validez nacional (incluye CABA y Provincia de Buenos Aires). Vigencia hasta 3 años. Proceso ágil 24–48 hs." />
 
